--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
     "moment": "^2.18.1",
-    "react": "^0.14 || ^15.5.4 || ^16.1.1" || ^17.0.1",
+    "react": "^0.14 || ^15.5.4 || ^16.1.1 || ^17.0.1",
     "react-dom": "^0.14 || ^15.5.4 || ^16.1.1 || ^17.0.1"
   },
   "engines": {
